Version 0.6-1 (2011-12-06)
o Fixed order of classes in pca.ridge
o Made plot3d an S3 generic; added plot3d.pcaridge and plot.pcaridge
o Added biplot.pcaridge() to draw variable vectors on a plot.pcaridge() plot
o Added options to precision.* for greater flexibility

Version 0.6-0 (2011-12-04)
o Added plot3d.ridge() using rgl, completing the main stages in visualization methods for ridge-like problems

Version 0.5-3 (2011-11-30)
o Added precision.ridge() method for measures of precision and shrinkage
o Added vif.ridge() method, extending the car S3 generic for ridge objects
o Now Depends: car

Version 0.5-2 (2011-11-25)
o Added Acetylene data
o Added vcov.ridge() method

Version 0.5-1 (2011-08-22)
o Fixed Authors@R in DESCRIPTION

Version 0.5-0 (2011-08-22)

o Added NAMESPACE
o Initial package version, released to R-Forge
o Added pca.ridge